objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>General Lead</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>DELETE</fullName>
        </values>
        <values>
            <fullName>DUPE</fullName>
        </values>
        <values>
            <fullName>Existing Client</fullName>
        </values>
        <values>
            <fullName>Interested in Later Call</fullName>
        </values>
        <values>
            <fullName>NC1</fullName>
        </values>
        <values>
            <fullName>NC2</fullName>
        </values>
        <values>
            <fullName>NC3</fullName>
        </values>
        <values>
            <fullName>NC4</fullName>
        </values>
        <values>
            <fullName>New Lead</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>No Interest</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Reassigned</fullName>
        </values>
        <values>
            <fullName>Recycle</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Nick Vertucci Bus Tour</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>DELETE</fullName>
        </values>
        <values>
            <fullName>DUPE</fullName>
        </values>
        <values>
            <fullName>Existing Client</fullName>
        </values>
        <values>
            <fullName>Interested in Later Call</fullName>
        </values>
        <values>
            <fullName>NC1</fullName>
        </values>
        <values>
            <fullName>NC2</fullName>
        </values>
        <values>
            <fullName>NC3</fullName>
        </values>
        <values>
            <fullName>NC4</fullName>
        </values>
        <values>
            <fullName>New Lead</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>No Interest</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Reassigned</fullName>
        </values>
        <values>
            <fullName>Recycle</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AMS_create__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created By AutoMagic Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AMS_update__c</fullName>
        <label>AutoMagic Sync Last Update</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Roles__c</fullName>
        <label>Account Roles</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Contact</fullName>
                </value>
                <value>
                    <fullName>Primary Contact Spouse</fullName>
                </value>
                <value>
                    <fullName>Primary Contact Child</fullName>
                </value>
                <value>
                    <fullName>Business Partner</fullName>
                </value>
                <value>
                    <fullName>Business Partner Spouse</fullName>
                </value>
                <value>
                    <fullName>Second Business Partner</fullName>
                </value>
                <value>
                    <fullName>Second Business Partner Spouse</fullName>
                </value>
                <value>
                    <fullName>Assistant</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Outside Attorney</fullName>
                </value>
                <value>
                    <fullName>Outside Accountant</fullName>
                </value>
                <value>
                    <fullName>Outside Bookkeeper</fullName>
                </value>
                <value>
                    <fullName>Event Guest</fullName>
                </value>
                <value>
                    <fullName>Contact Spouse</fullName>
                </value>
                <value>
                    <fullName>Anderson Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Advisor_Admin_Status__c</fullName>
        <description>Removes the lead from a lead list Bucket.</description>
        <label>Advisor Admin Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Advisor_Admin</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>AffiliateName__c</fullName>
        <label>Affiliate Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Affiliate_Lead__c</fullName>
        <formula>IF( CONTAINS(Original_Campaign_Source__r.Parent.Name,&apos;Affiliate&apos;),TRUE, 
IF( CONTAINS(Original_Campaign_Source__r.Parent.Parent.Name,&apos;Affiliate&apos;),TRUE, 
IF( CONTAINS(Original_Campaign_Source__r.Parent.Parent.Parent.Name,&apos;Affiliate&apos;),TRUE, 
IF( CONTAINS(Original_Campaign_Source__r.Parent.Parent.Parent.Parent.Name,&apos;Affiliate&apos;),TRUE,
FALSE
))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affiliate Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Are_You_A_Landlod__c</fullName>
        <label>Are You A Landlod?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>First user lead was assigned to</inlineHelpText>
        <label>Assigned</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bounced_or_Unsubscribed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field is synced from Hubspot. Qualified leads that have no activity after 90 days.</inlineHelpText>
        <label>Bounced or Unsubscribed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Name_First_Choice__c</fullName>
        <description>Entity amount</description>
        <label>Entity Purchased</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Name_Second_Choice__c</fullName>
        <description>Entity Name Second Choice</description>
        <label>Event Location</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAM__c</fullName>
        <defaultValue>&apos;Team Renewals&apos;</defaultValue>
        <label>CAM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CAM</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calendly__CalendlyCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CalendlyCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Set by Hubspot - Store the latest Campaign Source</description>
        <label>Campaign Source</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Leads (Campaign Source)</relationshipLabel>
        <relationshipName>Leads2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ChargentSFA__Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentSFA__ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChargentSFA__SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Children__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Does this person have children</description>
        <label>Children</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Signed_Up_for_AP_Event__c</fullName>
        <label>Client Signed Up for AP Event</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CloudingoAgent__ARDI__c</fullName>
        <label>Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__AR__c</fullName>
        <label>Address Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__AS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__ATZ__c</fullName>
        <label>Address Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__AV__c</fullName>
        <label>Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__LES__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Lead Email Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Company_Lead_Type__c</fullName>
        <inlineHelpText>Used to define where the client account originally came from - an Anderson or Infinity Lead Source.</inlineHelpText>
        <label>Company Lead Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Anderson</fullName>
                </value>
                <value>
                    <fullName>Infinity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consult_Date__c</fullName>
        <label>Consult Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Contact_Note__c</fullName>
        <label>Contact Note</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Created_By_Profile__c</fullName>
        <formula>CreatedBy.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By (Profile)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creative__c</fullName>
        <description>LinkedIn Map - Creative</description>
        <label>Creative</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Structure__c</fullName>
        <inlineHelpText>CSR to ask how the business is structured</inlineHelpText>
        <label>Current Structure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nothing Set-Up</fullName>
                </value>
                <value>
                    <fullName>LLC</fullName>
                </value>
                <value>
                    <fullName>Sole Prop</fullName>
                </value>
                <value>
                    <fullName>S Corp</fullName>
                </value>
                <value>
                    <fullName>C Corp</fullName>
                </value>
                <value>
                    <fullName>General Partnership</fullName>
                </value>
                <value>
                    <fullName>Limited Partnership</fullName>
                </value>
                <value>
                    <fullName>Non Profit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Multiple Entities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DO_NOT_CALL_TILL_AFTER__c</fullName>
        <description>The date a client should not be called until after</description>
        <inlineHelpText>Do not call a customer until after the date in this box.</inlineHelpText>
        <label>DO NOT CALL TILL AFTER</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Email_2__c</fullName>
        <inlineHelpText>describes the secondary email address of this lead.</inlineHelpText>
        <label>Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Groove_Convert__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;lead/leadconvert.jsp?retURL=%2F&apos; &amp; Id &amp; &apos;&amp;id=&apos; &amp; Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is a Groove action button that creates the &quot;Convert&quot; URL</inlineHelpText>
        <label>Convert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Groove_LinkedIn__c</fullName>
        <formula>&apos;https://www.linkedin.com/search/results/index/?keywords=&apos; &amp;
SUBSTITUTE(SUBSTITUTE(FirstName, &quot; &quot;, &quot;+&quot;), &quot;&amp;&quot;, &quot;%26&quot;) &amp; &apos;+&apos;
&amp; SUBSTITUTE(SUBSTITUTE(LastName, &quot; &quot;, &quot;+&quot;), &quot;&amp;&quot;, &quot;%26&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is the URL of a &quot;LinkedIn&quot; lookup screen. This can be added to a Groove View and can be rendered as an action button in your email client.</inlineHelpText>
        <label>LinkedIn</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Groove_Log_a_Call__c</fullName>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) &amp; &apos;00T/e?title=Call&amp;who_id=&apos; &amp; Id &amp; &apos;&amp;followup=1&amp;tsk5=Call&amp;retURL=%2F&apos; &amp; Id &amp; &apos;&amp;ent=Task&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is the URL of a &quot;Log a Call&quot; screen. This can be added to a Groove View and can be rendered as an action button in your email client.</inlineHelpText>
        <label>Log a Call</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Groove_Notes__c</fullName>
        <inlineHelpText>Contains notes that are surfaced in Groove&apos;s sidebar by default.</inlineHelpText>
        <label>Groove Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Is_Created_By_Groove__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether this lead was created by Groove.</inlineHelpText>
        <label>Is Created By Groove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Lookup_Mobile__c</fullName>
        <formula>RIGHT(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LOWER(MobilePhone), &apos;%&apos;, &apos;&apos;), &apos;~&apos;, &apos;&apos;), &apos;@&apos;, &apos;&apos;) , &apos;&gt;&apos;, &apos;&apos;) , &apos;=&apos;, &apos;&apos;) , &apos;&lt;&apos;, &apos;&apos;) , &apos; &apos;, &apos;&apos;) , &apos;o&apos;, &apos;&apos;) , &apos;}&apos;, &apos;&apos;) , &apos;|&apos;, &apos;&apos;) , &apos;{&apos;, &apos;&apos;) , &apos;z&apos;, &apos;&apos;) , &apos;y&apos;, &apos;&apos;) , &apos;x&apos;, &apos;&apos;) , &apos;w&apos;, &apos;&apos;) , &apos;v&apos;, &apos;&apos;) , &apos;u&apos;, &apos;&apos;) , &apos;t&apos;, &apos;&apos;) , &apos;s&apos;, &apos;&apos;) , &apos;r&apos;, &apos;&apos;) , &apos;q&apos;, &apos;&apos;) , &apos;p&apos;, &apos;&apos;) , &apos;n&apos;, &apos;&apos;) , &apos;m&apos;, &apos;&apos;) , &apos;l&apos;, &apos;&apos;) , &apos;k&apos;, &apos;&apos;) , &apos;j&apos;, &apos;&apos;) , &apos;i&apos;, &apos;&apos;) , &apos;h&apos;, &apos;&apos;) , &apos;g&apos;, &apos;&apos;) , &apos;f&apos;, &apos;&apos;) , &apos;e&apos;, &apos;&apos;) , &apos;d&apos;, &apos;&apos;) , &apos;c&apos;, &apos;&apos;) , &apos;b&apos;, &apos;&apos;) , &apos;a&apos;, &apos;&apos;) , &apos;_&apos;, &apos;&apos;) , &apos;^&apos;, &apos;&apos;) , &apos;]&apos;, &apos;&apos;) , &apos;\\&apos;, &apos;&apos;) , &apos;[&apos;, &apos;&apos;) , &apos;?&apos;, &apos;&apos;) , &apos;;&apos;, &apos;&apos;) , &apos;:&apos;, &apos;&apos;) , &apos;/&apos;, &apos;&apos;) , &apos;.&apos;, &apos;&apos;) , &apos;-&apos;, &apos;&apos;) , &apos;,&apos;, &apos;&apos;) , &apos;+&apos;, &apos;&apos;) , &apos;*&apos;, &apos;&apos;) , &apos;)&apos;, &apos;&apos;) , &apos;(&apos;, &apos;&apos;) , &apos;&amp;&apos;, &apos;&apos;) , &apos;$&apos;, &apos;&apos;) , &apos;#&apos;, &apos;&apos;) , &apos;&quot;&apos;, &apos;&apos;) , &apos;!&apos;, &apos;&apos;) , &apos;-&apos;, &apos;&apos;),9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the last 9 digits of the mobile phone number. This field is a helper field for Groove dialer</inlineHelpText>
        <label>Lookup Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Lookup_Phone__c</fullName>
        <formula>RIGHT(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(LOWER(Phone), &apos;%&apos;, &apos;&apos;), &apos;~&apos;, &apos;&apos;), &apos;@&apos;, &apos;&apos;) , &apos;&gt;&apos;, &apos;&apos;) , &apos;=&apos;, &apos;&apos;) , &apos;&lt;&apos;, &apos;&apos;) , &apos; &apos;, &apos;&apos;) , &apos;o&apos;, &apos;&apos;) , &apos;}&apos;, &apos;&apos;) , &apos;|&apos;, &apos;&apos;) , &apos;{&apos;, &apos;&apos;) , &apos;z&apos;, &apos;&apos;) , &apos;y&apos;, &apos;&apos;) , &apos;x&apos;, &apos;&apos;) , &apos;w&apos;, &apos;&apos;) , &apos;v&apos;, &apos;&apos;) , &apos;u&apos;, &apos;&apos;) , &apos;t&apos;, &apos;&apos;) , &apos;s&apos;, &apos;&apos;) , &apos;r&apos;, &apos;&apos;) , &apos;q&apos;, &apos;&apos;) , &apos;p&apos;, &apos;&apos;) , &apos;n&apos;, &apos;&apos;) , &apos;m&apos;, &apos;&apos;) , &apos;l&apos;, &apos;&apos;) , &apos;k&apos;, &apos;&apos;) , &apos;j&apos;, &apos;&apos;) , &apos;i&apos;, &apos;&apos;) , &apos;h&apos;, &apos;&apos;) , &apos;g&apos;, &apos;&apos;) , &apos;f&apos;, &apos;&apos;) , &apos;e&apos;, &apos;&apos;) , &apos;d&apos;, &apos;&apos;) , &apos;c&apos;, &apos;&apos;) , &apos;b&apos;, &apos;&apos;) , &apos;a&apos;, &apos;&apos;) , &apos;_&apos;, &apos;&apos;) , &apos;^&apos;, &apos;&apos;) , &apos;]&apos;, &apos;&apos;) , &apos;\\&apos;, &apos;&apos;) , &apos;[&apos;, &apos;&apos;) , &apos;?&apos;, &apos;&apos;) , &apos;;&apos;, &apos;&apos;) , &apos;:&apos;, &apos;&apos;) , &apos;/&apos;, &apos;&apos;) , &apos;.&apos;, &apos;&apos;) , &apos;-&apos;, &apos;&apos;) , &apos;,&apos;, &apos;&apos;) , &apos;+&apos;, &apos;&apos;) , &apos;*&apos;, &apos;&apos;) , &apos;)&apos;, &apos;&apos;) , &apos;(&apos;, &apos;&apos;) , &apos;&amp;&apos;, &apos;&apos;) , &apos;$&apos;, &apos;&apos;) , &apos;#&apos;, &apos;&apos;) , &apos;&quot;&apos;, &apos;&apos;) , &apos;!&apos;, &apos;&apos;) , &apos;-&apos;, &apos;&apos;),9)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the last 9 digits of the phone number. This field is a helper field for Groove dialer</inlineHelpText>
        <label>Lookup Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Normalized_Mobile__c</fullName>
        <description>Contains the last 9 digits of the mobile phone number, without non-numeric characters.</description>
        <inlineHelpText>Managed by Groove.</inlineHelpText>
        <label>Normalized Mobile</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaScoopComposer__Normalized_Phone__c</fullName>
        <description>Contains the last 9 digits of the phone number, without non-numeric characters.</description>
        <inlineHelpText>Managed by Groove.</inlineHelpText>
        <label>Normalized Phone</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaystoClose__c</fullName>
        <formula>ConvertedDate - DATEVALUE(CreatedDate)</formula>
        <label>DaystoClose</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dividend_Income__c</fullName>
        <label>Dividend Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dividends__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dividends</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Document_Referrer__c</fullName>
        <inlineHelpText>This is the page URL of the page that brought the user to the form page</inlineHelpText>
        <label>Document Referrer</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Document_Title__c</fullName>
        <inlineHelpText>Title of the Page where the user submitted the form and the record was created</inlineHelpText>
        <label>Document Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>E_Mail__c</fullName>
        <label>E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Event_Advisor_Status__c</fullName>
        <description>Removes the lead from the Event Advisor lead calling list</description>
        <label>Event Advisor Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Event_Advisors_Lead_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Lead__c</fullName>
        <label>Event Lead</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Link__c</fullName>
        <description>URL to the Event for this Lead to Book</description>
        <label>Event Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Existing_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this person has an existing business</description>
        <label>Existing Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Existing Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Existing_Living_Trust__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check if this person has an existing living trust</description>
        <label>Existing Living Trust</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FT_or_PT_Investor__c</fullName>
        <inlineHelpText>CSR to ask if the business is Full time, part time or hasn&apos;t started yet.</inlineHelpText>
        <label>FT or PT Investor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full Time</fullName>
                </value>
                <value>
                    <fullName>Part Time</fullName>
                </value>
                <value>
                    <fullName>Not Started</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name_Hidden_for_Conversion__c</fullName>
        <label>First Name (Hidden for Conversion)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GACLIENTID__c</fullName>
        <label>GACLIENTID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GATRACKID__c</fullName>
        <label>GATRACKID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAUSERID__c</fullName>
        <label>GAUSERID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <description>*Field label has to be ALL-CAPS, created for Google Ads Conversion Import for Salesforce</description>
        <label>GCLID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Interest__c</fullName>
        <label>General Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Stock Investing</fullName>
                </value>
                <value>
                    <fullName>Other Business</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grandparent_Campaign__c</fullName>
        <label>Grandparent Campaign</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Guest_First_Last_Name__c</fullName>
        <label>Guest First &amp; Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>High_Net_Worth_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>High Net Worth Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hubspot_Contact_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>The unique Id for this Contact within Hubspot.</inlineHelpText>
        <label>Hubspot Contact Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hubspot_Lifecycle_Stage__c</fullName>
        <label>Hubspot Lifecycle Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>subscriber</fullName>
                </value>
                <value>
                    <fullName>lead</fullName>
                    <default>true</default>
                    <label>lead</label>
                </value>
                <value>
                    <fullName>opportunity</fullName>
                </value>
                <value>
                    <fullName>customer</fullName>
                </value>
                <value>
                    <fullName>evangelist</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
                <value>
                    <fullName>Marketing Qualified Lead</fullName>
                </value>
                <value>
                    <fullName>Sales Qualified Lead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Important_Area__c</fullName>
        <inlineHelpText>For CSR to ask all leads which is most important to you of the three areas we work with clients like you.</inlineHelpText>
        <label>Important Areas</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Protection</fullName>
                </value>
                <value>
                    <fullName>Tax Savings</fullName>
                </value>
                <value>
                    <fullName>Estate Planning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Income_Type__c</fullName>
        <description>Select the primary sources of income</description>
        <label>Income Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1099</fullName>
                </value>
                <value>
                    <fullName>Dividend / Stocks / Investments</fullName>
                </value>
                <value>
                    <fullName>W-2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Source_Client__c</fullName>
        <description>This is the source on how the client became a Lead. This value will carry over to the Account when the lead is converted for the first time. If the Lead is merged and the Account already exists, it will not overwrite the existing values on the Account.</description>
        <inlineHelpText>This is the source on how the client became a Lead. This value will carry over to the Account when the lead is converted for the first time. If the Lead is merged and the Account already exists, it will not overwrite the existing values on the Account.</inlineHelpText>
        <label>Initial Source Client</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Initial_Source_Client</valueSetName>
        </valueSet>
    </fields>
</CustomObject>